[package]
name = "sosam-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
block-padding = "0.3"
cbc = "0.1.2"
generic-array = "1.1.0"
hex = "0.4"
rand = "0.8.5"
ring = "0.17.8"
sha2 = "0.10.8"
thiserror = "1.0.63"
rayon = "1.5"
rand_chacha = "0.3.1"
num_cpus = "1.16.0"
dashmap = "6.1.0"

[features]
simulation = []
